# Data-Transfer-Protocols

./: CMakeLists.txt  Crash Team Racing: Nitro Fueled Dev Time Rankings.txt  README.md  asdf.txt
Read-Write/: asdf.txt
Tests/: 04-20-2022.txt
src/: client.cpp  file_io.h  packet.h  packet_file_io.h  prompts.h  server.cpp  sit_errors.h  socket_io.h  test.cpp
